1.4.0-vcli-alpha Sara

* Started the coordinator server to expose cluster information
	- Added log service that listed the log information

* Modfyied the MDX to return the log entries (had to specialize the insert status to make Derby happy)

* Creates an auxiliar service that just display forms for 
	- Adding to a repository
	- Create a user 
	- Roles map for granting and revoking

* Added simple forms for search and the like

* Created the proper XSLT transformation for all the services that do not require complex for forms

* Created a first XSLT for /services/location/list.html

* Created the basic mechaniscs for returning HTML pages based on XML and XSLTs

* Modified the MDX connection duplications (Derby can support multiple concurrent
  connections to the DB, as long as they are in the same JVM). This gets rid of the
  results problem reading and the obscure message for autocommit off.

* Fixed the Meandre Client and it failing tests

* Fixed the Meandre Admin Client and its failing tests

* Fixed non-client related failing tests

* Migrated the repository calls that response to POSTs
	- /add
	- /add_flow_description
	
* Migrated the repository calls that response to GETs
	- /dump.txt
	- /regenerate
	- /list_components
	- /list_flows
	- /tags
	- /tags_components
	- /tags_flows
	- /components_by_tag (changed the parameter from q to tag)
	- /components_by_flow (changed the parameter from q to tag)
	- /describe_components
	- /describe_all_components
	- /describe_flows
	- /describe_all_flows
	- /search_components (still does not allow multiple q parameters)
	- /search_flows (still does not allow multiple q parameters)
	- /rename	 

* Migrated the Security service. Also modified the following
	- assign_roles -> grant_roles (for consistency)
	- create_user -> create_users (for consistency)
	- remove_user -> remove_users (for consitency)
	- Added update_user to allow updating the user profile
	