@@ -1,13 +1,0 @@
-package org.meandre.core.services.coordinator;
-
-/** This class implements the main arbitration to the main
- * data backend store.
- * 
- * @author Xavier Llor&agrave;
- *
- */
-public class Coordinator {
-	
-	
-
-}
